# okta-agentic-soc

./: README.md  how_to_run.txt  pyproject.toml  run.sh
data/: commands.jsonl  findings.jsonl  incidents.jsonl  plans.jsonl
docs/plans/: 2026-03-03-dynamic-agent-routing-design.md  2026-03-03-dynamic-agent-routing-plan.md  2026-03-03-escalation-agent-design.md  2026-03-03-escalation-agent-plan.md
src/okta_agentic_soc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/okta_soc/agents/: base.py  command_agent.py  detector_agent.py  escalation_agent.py  orchestrator.py  planner_agent.py  registry.py  risk_agent.py  router_agent.py
src/okta_soc/core/: config.py  llm.py  models.py  pipeline_context.py  router_models.py
src/okta_soc/detectors/: base.py  failed_login_burst.py  impossible_travel.py  registry.py
src/okta_soc/ingest/: okta_client.py  pipeline.py
src/okta_soc/interface/: cli.py  show_all.py
src/okta_soc/storage/: repositories.py
tests/: demo_okta_system_logs.json  test_agent_contract.py  test_agent_migrations.py  test_agent_registry.py  test_escalation_agent.py  test_orchestrator.py  test_pipeline_context.py  test_pipeline_wiring.py  test_router_agent.py  test_router_models.py
